--- a/static/diregistro.css
+++ b/static/diregistro.css
@@ -1,3 +1,17 @@
+nav > a {
+    color:#fff ;
+    font-size: 25px;
+    font-weight: bolder;
+    text-decoration: none;
+    margin-right: 7px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+nav > a:hover {
+    text-decoration: underline;
+}
+
+
 :root {
     --colorTextos: #49454567;
 }
@@ -48,6 +62,13 @@ form .grupo{
     margin: 45px ;
 }
 
+.warnings{
+    width: 200px;
+    text-align: center;
+    margin: auto;
+    color: #B06AB3;
+    padding-top: 20px;
+}
 input{
     background: none;
     color: #c6c6c6;
@@ -126,4 +147,5 @@ button{
         width: 80%;
     }
 }
+
 
