--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,8 @@
 
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	      <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title></title>
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="{{url_for('static',filename='project.css')}}">
@@ -9,8 +11,29 @@
 	     
     </head>
     
-    
-  
+    <header>
+      <nav>
+          <nav role="navigation">
+              <div id="menuToggle">
+           
+                <input type="checkbox" />
+                
+            
+                <span></span>
+                <span></span>
+                <span></span>
+                
+                <ul id="menu">
+                  <a href="/"><li>Inicio</li></a>
+                  <a href="/registro"><li>Registrarse</li></a>
+                
+                  
+                 
+                </ul>
+              </div>
+            </nav>
+      </nav>
+ 
     
     
    
@@ -24,23 +47,26 @@
                   <div class="col-md-9 col-lg-8 mx-auto">
                     <h3 class="login-heading mb-4">Bienvenido de vuelta</h3>
                     <form action="" method="POST">
-                      <div class="form-label-group">
-                        <input type="email" name="LEmail" id="inputEmail" class="form-control" placeholder="Correo Electronico" required autofocus>
+                      <div class="form-group">
                         <label for="inputEmail">Correo Electronico</label>
+                        <input type="email" name="LEmail"  class="form-control" id="inputEmail" aria-describedby="emailHelp">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                        
                       </div>
-      
-                      <div class="form-label-group">
-                        <input type="password" name="LPassword" id="inputPassword" class="form-control" placeholder="Contraseña" required>
-                        <label for="inputPassword">Contraseña</label>
+                      <div class="form-group">
+                        <label for="inputPassword">Password</label>
+                        <input type="password" name="LPassword" class="form-control" id="inputPassword">
                       </div>
+                   
       
                       <div class="custom-control custom-checkbox mb-3">
                         <input type="checkbox" class="custom-control-input" id="customCheck1">
                         <label class="custom-control-label" for="customCheck1">Recordar Contraseña</label>
                       </div>
-                      <button class="btn btn-lg btn-primary btn-block btn-login text-uppercase font-weight-bold mb-2" type="submit"><a href="logeado">Ingresar</a></button>
+                      <button class="btn btn-lg btn-primary btn-block btn-login text-uppercase font-weight-bold mb-2" type="submit"href="logeado">Ingresar</button>
+                      
                       <div class="text-center">
-                        <a class="small" href="#">Olvido su contraseña?</a></div>
+                      <btn btn-lg btn-primary btn-block btn-login text-uppercase font-weight-bold mb-2 href="#" id="abrir">Olvido su contraseña?</a></button>
                     </form>
                   </div>
                 </div>
@@ -48,5 +74,26 @@
             </div>
           </div>
         </div>
-      </div>   
+      </div> 
+      
+      <div id="miModal" class="modal">
+        <div class="flex" id="flex">
+          <div class="contenido-modal">
+            <div class="modal-header flex">
+              <h2>Ingrese su Correo</h2>
+              <form action="">
+              <div class="contenedor-inputs">             
+                <input type="email" placeholder="Correo">
+              </div>
+              <input type="submit" class="btn-submit" value="Enviar">
+            </form>
+              <span class="close" id="close">&times;</span>
+            </div>
+          
+          </div>
+        </div>
+      </div>
+      <script src="../static/log.js"></script>
+      
+   
 </html>
