--- a/templates/registro.html
+++ b/templates/registro.html
@@ -8,14 +8,21 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../static/ekko.jpg" type ="image/x-icon">
 </head>
+
 <body>
+  
+    <header>
+        <nav>
+            <a href="/"> Volver al Inicio  </a>     
+        </nav>
+  
+
+            
+        
     <form action="/registro" method="POST" id="form">
         <div class="form">
             <h1>Registro</h1>
-            <div class="grupo">
-                <input type="text" name="DName" id="name" required><span class="barra"></span>
-                <label for="">Nombre Completo</label>
-            </div>
+           
             <div class="grupo">
                 <input type="email" name="DEmail" id="email" required><span class="barra"></span>
                 <label for="">Email</label>
@@ -24,29 +31,14 @@
                 <input type="password" name="DPassword" id="password" required><span class="barra"></span>
                 <label for="">Password</label>
             </div>
-            <div class="grupo">
-                <input type="text" name="DDireccion" id="direccion" required><span class="barra"></span>
-                <label for="">Direccion</label>
-            </div>
-            <div class="grupo">
-                <input type="date" name="DEdad" id="edad" required><span class="barra"></span>
-                <label for="">Fecha de Nacimiento</label>
-            </div>
-
-            <div class="grupo">
-                <input type="text" name="DRFC" id="rfc" required><span class="barra"></span>
-                <label for="">RFC</label>
-            </div>
           
-        
-            <div class="grupo">
-                <label for="">Estado Civil</label>
-                <input type="text" id="estac" name="DEstadoCivil" required><span class="barra"></span>
-            </div>
 
-            <button type="submit">Suscribirte</button>
+   
+
+            <button type="submit" id="suscribirse">Suscribirte</button>
+          
         </div>
     </form>
-    <script src="main.js"></script>
+    <script src="../static/app.js"></script>
 </body>
 </html>
